crates/solidity-v2/testing/snapshots/cst_output/YulExpression/hex_trailing_ident_start/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of YulBreakKeyword_Reserved, YulCloseBrace, YulContinueKeyword_Reserved, YulDecimalLiteral, YulDoubleQuotedHexStringLiteral, YulDoubleQuotedStringLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulSingleQuotedHexStringLiteral, YulSingleQuotedStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/YulExpression/hex_trailing_ident_start/input.sol:5:1]
   │
 5 │ 0x1$
   │ ──┬─  
   │   ╰─── Error occurred here.
───╯
